# thesis-codecontest-solver

./: .clang-format  .gitignore  .gitmodules  .json  .md  README.md  bad.txt  checked.txt  checker  checker-cpp  checker-cpp.cpp  checker-py.py  checker.cpp  clang.cpp  clean_math.py  cmp.txt  code-failed.txt  code-passed.txt  code_translate.py  codecontest-training.ipynb  const_getter.py  count.py  count2.py  cspell.json  delete_cache.py  display.py  dumpdb.py  editorial_edge_cases.txt  fast_review.py  fix_md.py  formatting_math.py  good.txt  idk.py  keep.txt  leetcode.py  leetcode2.py  lines.md  log.txt  md_links.md  normalize_code.py  (+38 more)
bits/: stdc++.h
codecontest/: codecontest-analyze.ipynb  codecontest_analyze.ipynb  codecontest_analyze.py  download_description.py  insert_database.py  problem-urls.txt  problem_group.py  prompts.py  split_codecontest.py
codeforces-crawler/: data-analyze.py  data_analyze.py  editorial_content.py  editorial_urls.txt  potentially-no-editorial.txt  potentially-no-material.txt  special_cases.txt
codeforces_crawler/: crawl_editorial.py  data_analyze.py  editorial_content.py
constants/: __init__.py
database/: __init__.py  init.sql  mongodb.py
entity/: problem.py
gemini/: 1008_E. Guess two numbers.txt
helpers/: __init__.py
html2text/: html_analyze.py  html_analyze_single.py
judges/: 1000_C. Covered Points Count  1000_C. Covered Points Count.cpp  2024-05-15 23:59:03.py  2024-05-16 00:41:42.py  2024-05-16 00:41:57.py  2024-05-16 00:42:11.py  2024-05-16 00:42:23.py  2024-05-16 00:42:38.py  translate  translate.cpp  (+1 more)
(+170 files in other folders)
